--- a/CodeFiles/batch_B/day5/positionRelative.html
+++ b/CodeFiles/batch_B/day5/positionRelative.html
@@ -10,6 +10,8 @@
             height: 300px;
             border: 3px solid black;
             top: 100px;
+            position: relative;
+            left: 50px;
         }
     </style>
 </head>
