all code files added till date

--- a/CodeFiles/batch_A/day7/template.html
+++ b/CodeFiles/batch_A/day7/template.html
@@ -1,32 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="template.css">
-</head>
-<body>
+    <link rel="stylesheet" href="template.css" />
+  </head>
+  <body>
     <header>
-        <div id="logo">
-            <img src="ai avtar of me.png" alt="">
-            <span >My Logo</span>
-        </div>
+      <div id="logo">
+        <img src="ai avtar of me.png" alt="" />
+        <span>My Logo</span>
+      </div>
 
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="./responsiveGrid.html">Portfolio</a></li>
-                <li><a href="./responsiveGrid.html">About</a></li>
-                <li><a href="./responsiveGrid.html">Contact</a></li>   
-                <li id="blog"><a href="./responsiveGrid.html">blog</a></li>   
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="./responsiveGrid.html">Portfolio</a></li>
+          <li><a href="./responsiveGrid.html">About</a></li>
+          <li><a href="./responsiveGrid.html">Contact</a></li>
+          <li><a id="blog" href="./responsiveGrid.html">blog</a></li>
+        </ul>
+      </nav>
 
-        <div id="search">
-            <span>Search</span>
-            <img src="./ai avtar of me.png" alt="">
-        </div>
+      <div id="search">
+        <span>Search</span>
+        <img src="./ai avtar of me.png" alt="" />
+      </div>
     </header>
-</body>
+
+    <main>
+      <section class="corousal">
+        <div>
+          <h3>Good design is good business</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo,
+            ullam? Repudiandae doloribus dolore, et recusandae quaerat commodi
+            iure? Porro quam recusandae fugit a iure harum magni. Nostrum porro
+            dolores similique.
+          </p>
+          <button>Learn More</button>
+        </div>
+      </section>
+
+      <section class="services">
+        <button>OUR SERVICES</button>
+        <div id="articles">
+          <article>
+            <img src="./ai avtar of me.png" alt="" />
+            <h3>Web Design</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit abcd efhg
+              is sed minus dicta excepturi! <span>Details...</span>
+            </p>
+          </article>
+          <article>
+            <img src="./ai avtar of me.png" alt="" />
+            <h3>Web Design</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit abcd efhg
+              is sed minus dicta excepturi! <span>Details...</span>
+            </p>
+          </article>
+          <article>
+            <img src="./ai avtar of me.png" alt="" />
+            <h3>Web Design</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit abcd efhg
+              is sed minus dicta excepturi! <span>Details...</span>
+            </p>
+          </article>
+          <article>
+            <img src="./ai avtar of me.png" alt="" />
+            <h3>Web Design</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit abcd efhg
+              is sed minus dicta excepturi! <span>Details...</span>
+            </p>
+          </article>
+        </div>
+      </section>
+
+      <section class="portfolio">
+        <div class="container">
+          <div class="portfolio-heading">
+            <h3>Our Portfolio Awesome</h3>
+            <button>More Works</button>
+          </div>
+          <div class="portfolios">
+            <article>
+              <img src="./images/placeholder.png" alt="" />
+              <h4>Lorem ipsum dolor sit amet.</h4>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime
+                sapiente vero debitis officiis reiciendis laudantium!
+              </p>
+            </article>
+            <article>
+              <img src="./images/placeholder.png" alt="" />
+              <h4>Lorem ipsum dolor sit amet.</h4>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime
+                sapiente vero debitis officiis reiciendis laudantium!
+              </p>
+            </article>
+            <article>
+              <img src="./images/placeholder.png" alt="" />
+              <h4>Lorem ipsum dolor sit amet.</h4>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime
+                sapiente vero debitis officiis reiciendis laudantium!
+              </p>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section class="testimonials">
+        <h2>TESTIMONIALS</h2>
+        <p>
+          "Lorem ipsum dolor elit. Quasi ut suscipit nihil officia nisi enim
+          numquam labore natus maxime blanditiis!"
+        </p>
+        <div>
+          <h4>Jon Doe / CEO of LoremImpsum</h4>
+          <div class="images">
+            <div><img src="./ai avtar of me.png" alt="" /></div>
+            <div><img src="./ai avtar of me.png" alt="" /></div>
+            <div><img src="./ai avtar of me.png" alt="" /></div>
+          </div>
+        </div>
+      </section>
+
+      <footer>
+        <div>
+          <h4>BIRD FEEDS</h4>
+          <div>
+            <p>Check out this great theme item</p>
+            <a href="">vaibhavdewdhe.netlify.app</a>
+            <p>2 weeks ago</p>
+          </div>
+          <hr />
+          <div>
+            <p>Check out this great theme item</p>
+            <a href="">vaibhavdewdhe.netlify.app</a>
+            <p>2 weeks ago</p>
+          </div>
+          <hr />
+          <div>
+            <p>Check out this great theme item</p>
+            <a href="vaibhavdewdhe.netlify.app">vaibhavdewdhe.netlify.app</a>
+            <p>2 weeks ago</p>
+          </div>
+        </div>
+        <div>
+          <h4>NEWSLETTER</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic nam
+            accusamus obcaecati sint rerum necessitatibus.
+          </p>
+          <hr />
+          <form action="">
+            <label for="email">Your Email Address</label>
+            <input type="email" name="email" id="email" />
+            <input type="submit" value="Sign Up" />
+          </form>
+        </div>
+        <div class="projects">
+          <h4>RECENT PROJECTS</h4>
+          <div>
+            <div class="img"></div>
+            <div>
+              <p>Sketchy Business Card</p>
+              <a href="vaibhavdewdhe.netlify.app">vaibhavdewdhe.netlify.app</a>
+              <p>2 weeks ago</p>
+            </div>
+          </div>
+          <hr>
+          <div>
+            <div class="img"></div>
+            <div>
+              <p>Sketchy Business Card</p>
+              <a href="vaibhavdewdhe.netlify.app">vaibhavdewdhe.netlify.app</a>
+              <p>2 weeks ago</p>
+            </div>
+          </div>
+          <hr>
+          <div>
+            <div class="img"></div>
+            <div>
+              <p>Sketchy Business Card</p>
+              <a href="vaibhavdewdhe.netlify.app">vaibhavdewdhe.netlify.app</a>
+              <p>2 weeks ago</p>
+            </div>
+          </div>
+        </div>
+        <div class="contacts">
+          <h4>CONTACT</h4>
+          <div>
+            <img src="./images/envelope.png" alt="">
+            <div>
+              <p>1-000-000-0000</p>
+              <p>1-000-000-0000</p>
+            </div>
+          </div>
+          <div>
+            <img src="./images/envelope.png" alt="">
+            <div>
+              <p>1-000-000-0000</p>
+              <p>1-000-000-0000</p>
+            </div>
+          </div>
+          <div>
+            <img src="./images/envelope.png" alt="">
+            <div>
+              <p>abcdew@hijk.dgh</p>
+              <p>flahsdfkd@kfdk.com</p>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </main>
+  </body>
 </html>
