--- a/CodeFiles/batch_B/js/day15/search.html
+++ b/CodeFiles/batch_B/js/day15/search.html
@@ -1,13 +1,17 @@
 <script>
-    //check if element / number is present in array or not?
-    let a = [10,12,20,4,39,69,35,45];
-    let n = prompt("Enter the number: ")
+  //check if element / number is present in array or not?
+  let a = [10, 12, 20, 4, 39, 69, 35, 45];
+  let n = prompt("Enter the number: ");
 
-    let flag = false;
+  let flag = false;
 
-    for(let i=0; i<a.length; i++){
-        if(a[i] == n){
-            
-        }
+  for (let i = 0; i < a.length; i++) {
+    if (a[i] == n) {
+      flag = true;
+      break;
     }
+  }
+
+  if (flag) alert("Yes, element is present.");
+  else alert("no, element is NOT present.");
 </script>
