--- a/CodeFiles/batch_B/js/day22/animation.html
+++ b/CodeFiles/batch_B/js/day22/animation.html
@@ -23,11 +23,19 @@
       <button id="lightOff">lightOff</button>
       <button id="lightToggle">lightToggle</button>
     </div>
-    <img
-      width="150px"
-      src="../../../../Assignments/images/Day4/pokercardjpg.jpg"
-      alt=""
-    />
-    <img width="150px" id="light" src="../../../../Assignments/images/day22/lightOff.jpg" alt="lightOff">
+    <div id="home">
+      <h1>Our Home</h1>
+      <img id="poker"
+        width="150px"
+        src="../../../../Assignments/images/Day4/pokercardjpg.jpg"
+        alt=""
+      />
+      <img
+        width="150px"
+        id="light"
+        src="../../../../Assignments/images/day22/lightOff.jpg"
+        alt="lightOff"
+      />
+    </div>
   </body>
 </html>
