--- a/CodeFiles/batch_B/js/day23/originalSnake.html
+++ b/CodeFiles/batch_B/js/day23/originalSnake.html
@@ -7,30 +7,26 @@
     <script src="../jquery-3.7.1.js"></script>
     <script defer src="./orgSnake.js"></script>
     <style>
-      * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-      }
-      #parent {
-        width: 100%;
-        height: 100vh;
+      #game-box {
+        width: 400px;
+        height: 400px;
+        border: 2px solid #333;
+        background: #f1f1f1;
         position: relative;
         overflow: hidden;
       }
 
-      #snake {
-        width: 50px;
-        height: 50px;
-        background-color: green;
+      .snake-segment {
+        width: 20px;
+        height: 20px;
+        background: green;
+        border-radius: 10px;
         position: absolute;
-        top: 0;
-        left: 0;
       }
     </style>
   </head>
   <body>
-    <div id="parent">
+    <div id="game-box">
       <div id="snake"></div>
     </div>
   </body>
